<resources>
    <string name="app_name">RunApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="workout_list">Workout list</string>
    <string name="statistics">Statistics</string>
    <string name="name_first">Name</string>
    <string name="name_last">LastName</string>
    <string name="email">emailExample@mail.com</string>
    <string name="date">dd/MM/yyyy</string>
    <string name="time">Time: %1$s min</string>
    <string name="distance">Distance: %1$s m</string>
    <string name="speed">Speed: %1$s m/s</string>
    <string name="add_jog">Add jog</string>
    <string name="addDescription">Add</string>
    <string name="topicHint">topic</string>
    <string name="textHint">text</string>
    <string name="send_feedback">Send feedback</string>
    <string name="av_speed">Av. Speed: %1$s m/s</string>
    <string name="av_time">Av. Time: %1$s min</string>
    <string name="weekLog">Week %1$d: (%2$s / %3$s)</string>
    <string name="av_distance">Av. Distance: %1$s m</string>
    <string name="distanceLog">Distance:</string>
    <string name="timeLog">Time:</string>
    <string name="dateLog">Date:</string>
    <string name="edit_distance_hint">In meters</string>
    <string name="edit_time_hint">In minutes</string>
    <string name="sign_in">Sign in</string>
    <string name="error_send_jog">Error, jog not sending</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="edit_login_hint">Edit login</string>
</resources>