<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="4dp"
        app:cardCornerRadius="16dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/weekStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekLog"
                android:textSize="22sp"
                android:textStyle="italic"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/av_time"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weekStatistics"
                />

            <TextView
                android:id="@+id/distanceStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/av_distance"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timeStatistics"
                />

            <TextView
                android:id="@+id/speedStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/av_speed"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distanceStatistics"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>